# forestmq

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  ampq.c  ampq.h  amqp.c  amqp.h  config.c  config.h  consumer.c  consumer.h  exchange.c  exchange.h  forest_mq.c  forest_mq.h  main.c  provider.c  provider.h  queue.c  queue.h  server.c  server.h  tcp.c  tcp.h  utils.c  utils.h
examples/: sample.json
examples/python/: consumer.py  provider.py
tests/: CMakeLists.txt  main.c  queue_tests.c  queue_tests.h
